fix(default-spacing): add comment for _config.scss and change parameter name in spacing.scss

--- a/scss/spacing.scss
+++ b/scss/spacing.scss
@@ -22,7 +22,7 @@ $classes: ("m":"margin", "p":"padding");
  * General spacing variables
  */
 
-@mixin generate-spacing-variables($vertical_spacing, $prefix) {
+@mixin generate-spacing-variables($axis_spacing, $prefix) {
   $project-prefix: map-get($info, 'variable-prefix');
   @each $breakpoint, $values in $vertical_spacing {
     @if is-breakpoint($breakpoint) {
